fix title bottom spacing

--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -85,7 +85,7 @@ body {
 .page__content {
   h2 {
     font-size: 2em;
-    padding-bottom: 0em;
+    padding-bottom: 0.5em;
     margin-top: 1em;
     border-bottom: 1px solid $border-color;
   }
